feat(element-template-generator): Add all auth sections if no security scheme provided by openapi scheme